--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,8 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - blog.qmd     
+      - blog.qmd
+      - about.qmd  
 
 format:
   html:
