--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - portfolio.qmd
+      - projects.qmd
       - blog.qmd
       - about.qmd  
 
