--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   favicon: ./imgs/favicon-32x32.png
   page-footer:     
     left: | 
-      Made with [ Posit Quarto](https://quarto.org)
+      © 2023 J. Thomas | Made with [Quarto](https://quarto.org)
     background: "#78C2AD" 
 
   navbar:
